<resources>
    <string name="app_name">RobertCarswellContacts</string>
    <string name="action_settings">Settings</string>
    <string name="landLine">Land Line</string>
    <string name="cell">Cell Phone</string>
    <string name="results">Results</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="email">eMail</string>
    <string name="phone">Phone #</string>
</resources>
